# gol

./: .gitignore  README.md  gol.cabal
src/: Main.hs
src/Algorithm/: GameOfLife.hs  GameOfLife3D.hs
